# paperterm

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.agent-rules/: approval.md  core.md  style.md  sync_agent_rules.py
.planning/: 20260508_init_vibe_coding.md  20260508_paperterm_v0.1_design.md  20260509_dogfood_bootstrap_prompt.md  20260510_phase1_skeleton.md  20260510_phase234_to_demo.md  20260511_phase5_user_workflow.md  README.md
docs/: usage.md
example/: README.md  demo.md  dogfood_check_output.txt  findings.md  glossary.yaml  lint_output.txt  raw2event_glossary.yaml  section.tex
example/inputs/: corpus_manifest.txt
example/lint_demo/: README.md  lint_output.txt  section.tex
example/output/: glossary.draft.yaml  run_log.md
prompts/: glossary_bootstrap.md
src/paperterm/: __init__.py  __main__.py  bootstrap.py  cli.py  glossary.py  latex.py  linter.py  prompts.py  report.py
src/paperterm/data/base/: event-camera.yaml  ml-common.yaml
tests/: test_bootstrap.py  test_cli_bootstrap.py  test_extends.py  test_glossary.py  test_latex.py  test_linter.py  test_prompts.py  test_version.py
tests/fixtures/tex/: basic_prose.tex  cite_skip.tex  comment_skip.tex  math_skip.tex  table_caption.tex  verbatim_skip.tex
