[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "paperterm"
description = "LaTeX-aware terminology consistency linter for academic papers."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Zijie Ning", email = "ningzijie98@gmail.com" }]
keywords = ["latex", "linter", "terminology", "academic-writing", "glossary"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dynamic = ["version"]
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "pylatexenc>=2.10",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.6",
    "mypy>=1.7",
    "types-PyYAML>=6.0",
]
# Note: paperterm v0.1 deliberately ships no API-provider integration.
# Users run their own LLM (Claude.ai, ChatGPT, …) and feed the YAML
# reply back manually. A future major version may re-introduce a
# provider extra here.

[project.scripts]
paperterm = "paperterm.cli:main"

[project.urls]
Homepage = "https://github.com/mm0806son/paperterm"
Repository = "https://github.com/mm0806son/paperterm"

[tool.hatch.version]
path = "src/paperterm/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/paperterm"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["example"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/paperterm", "tests"]

[[tool.mypy.overrides]]
# pylatexenc ships no type stubs (no py.typed marker, no stub package on
# typeshed); silence the missing-imports complaint without weakening
# strict mode globally.
module = "pylatexenc.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
